#66 Добавлена черновая версия SkillFamilyId. Тесты не работают. Возможно придётся откатиться на предыдущий комит.